[gd_scene load_steps=4 format=3 uid="uid://si6c5fp8iy1a"]

[ext_resource type="Texture2D" uid="uid://rxytgeiohe7l" path="res://src/main/assets/texture/klotski/长木块.png" id="1_he2sw"]
[ext_resource type="Script" path="res://src/main/scene/level/klotski/wood.gd" id="1_tbry8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o82f7"]
size = Vector2(262, 86)

[node name="LongWood" type="CharacterBody2D"]
script = ExtResource("1_tbry8")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -131.0
offset_top = -43.0
offset_right = 131.0
offset_bottom = 43.0
texture_normal = ExtResource("1_he2sw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_o82f7")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
